fix: force center tags to full-width so images expand properly on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -422,6 +422,8 @@ section.post {
   section.post iframe {
     width: 100%; }
   section.post center {
+    display: block;
+    width: 100%;
     margin-bottom: 30px; }
 
 .content h3{
